--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
 
         <mat-tab *ngFor="let table of database.tables"  [label]="table.role">
 
-          <app-table [table]="table"></app-table>
+          <app-table [table]="table" [passages]="this.getPassages(table.name) | async"></app-table>
 
         </mat-tab>
 
