--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -5,12 +5,12 @@
 
   <table mat-table [dataSource]="data" class="mat-elevation-z8">
     <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
-      <th mat-header-cell *matHeaderCellDef> {{column}} </th>
+      <th mat-header-cell *matHeaderCellDef> {{columns[column]}} </th>
       <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
     </ng-container>
 
     <ng-container matColumnDef="Edit">
-      <th mat-header-cell *matHeaderCellDef> Edit </th>
+      <th mat-header-cell *matHeaderCellDef> עדכון </th>
       <td mat-cell *matCellDef="let row">
         <button mat-icon-button color="warn" (click)="editRow(row)">
           <mat-icon aria-label="Edit">edit</mat-icon>
