--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<div style="display: flex; justify-content: center">
+<div class="title">
+
   <img src="../assets/title.png" alt="Living Together by Igor and the logo by ido" width="20%">
+
 </div>
 
 <div>
