--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -3,7 +3,7 @@
     <button mat-raised-button color="primary" (click)="fixLivingTogether()"> תיקון טבלה </button>
   </div>
 
-  <table mat-table [dataSource]="data" class="mat-elevation-z8">
+  <table mat-table [dataSource]="passageToDisplay" class="mat-elevation-z8">
     <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
       <th mat-header-cell *matHeaderCellDef> {{columns[column]}} </th>
       <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
@@ -18,7 +18,7 @@
       </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-    <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
+    <tr mat-header-row *matHeaderRowDef="rowsToDisplay"></tr>
+    <tr mat-row *matRowDef="let row; columns: rowsToDisplay;"></tr>
   </table>
 </div>
