removed mocks and added post requests

--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="buttons">
-    <button mat-raised-button color="primary" (click)="fixLivingTogether()"> תיקון טבלה </button>
+    <button mat-raised-button color="primary" (click)="fixTable()"> תיקון טבלה </button>
   </div>
 
   <table mat-table [dataSource]="passageToDisplay" class="mat-elevation-z8">
