--- a/src/app/table/table.component.css
+++ b/src/app/table/table.component.css
@@ -7,7 +7,13 @@ table {
   width: 80%;
   margin-left:auto;
   margin-right:auto;
-  margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+mat-form-field {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
