--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -4,22 +4,29 @@
     <button mat-raised-button color="primary" (click)="fixTable()"> תיקון טבלה </button>
   </div>
 
-  <table mat-table matSort [dataSource]="passageToDisplay" class="mat-elevation-z8">
-    <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
-      <th mat-header-cell mat-sort-header *matHeaderCellDef> {{columns[column]}} </th>
-      <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
-    </ng-container>
+  <div>
+    <mat-form-field>
+      <mat-label>Filter</mat-label>
+      <input matInput (keyup)="applyFilter($event)">
+    </mat-form-field>
 
-    <ng-container matColumnDef="Edit">
-      <th mat-header-cell *matHeaderCellDef> עדכון </th>
-      <td mat-cell *matCellDef="let row">
-        <button mat-icon-button color="warn" (click)="editRow(row)">
-          <mat-icon aria-label="Edit">edit</mat-icon>
-        </button>
-      </td>
-    </ng-container>
+    <table mat-table matSort [dataSource]="passageToDisplay" class="mat-elevation-z8">
+      <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
+        <th mat-header-cell mat-sort-header *matHeaderCellDef> {{columns[column]}} </th>
+        <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="rowsToDisplay"></tr>
-    <tr mat-row *matRowDef="let row; columns: rowsToDisplay;"></tr>
-  </table>
+      <ng-container matColumnDef="Edit">
+        <th mat-header-cell *matHeaderCellDef> עדכון </th>
+        <td mat-cell *matCellDef="let row">
+          <button mat-icon-button color="warn" (click)="editRow(row)">
+            <mat-icon aria-label="Edit">edit</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="rowsToDisplay"></tr>
+      <tr mat-row *matRowDef="let row; columns: rowsToDisplay;"></tr>
+    </table>
+  </div>
 </div>
