--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -16,7 +16,7 @@
         <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="Edit">
+      <ng-container *ngIf="isLogicTable()" matColumnDef="Edit">
         <th mat-header-cell *matHeaderCellDef> עדכון </th>
         <td mat-cell *matCellDef="let row">
           <button mat-icon-button color="warn" (click)="editRow(row)">
